force-app/main/default/objects/Office_Account_Monthly_Totals__c/Office_Account_Monthly_Totals__c.object-meta.xml
<CustomObject>
    <description>Used for Balance sheet to capture monthly totals</description>
    <label>Office Account Monthly Totals</label>
    <nameField>
        <displayFormat>OAMT-{0}</displayFormat>
        <label>Office Account Monthly Totals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Account Monthly Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>