force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <description>Populated by CreateOAMTRecords apex class. Sum of Transaction__c.Transaction_Sum__c for all Transactions where Deposit Date is in the previous month and Transaction Type = 'Adjustment'.</description>
    <inlineHelpText>Sum of Adjustment-type Transactions deposited in the previous month.</inlineHelpText>
    <label>+ Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>