force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Deposited_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Receipts__c</fullName>
    <description>Populated by CreateOAMTRecords apex class. Sum of Receipt__c.Payment_Amount__c where Status = Deposited, Returned, or Deposited-Returned; and Deposit Date is in the previous month.</description>
    <inlineHelpText>Sum of Receipts where Deposit Date is in the previous month and Status is currently Deposited, or Deposited-Returned.</inlineHelpText>
    <label>+ Deposited Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>