force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Disbursements__c</fullName>
    <description>Populated by CreateOAMTRecords apex class. Sum of Warrant__c.Amount__c where Issue Date is in the previous month, regardless of current Status.</description>
    <inlineHelpText>Sum of Warrants where Issue Date is in the previous month.</inlineHelpText>
    <label>- Disbursements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>