force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>CASE(MONTH(Date__c),
1, "Jan",
2, "Feb",
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun",
7, "Jul",
8, "Aug",
9, "Sep",
10, "Oct",
11, "Nov",
12, "Dec",
NULL) 
&amp;
"-"
&amp;
TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month-Year</label>
    <type>Text</type>
</CustomField>