force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Prior_Month_Returned_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Returned_Receipts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>As of Sept 2023, this field is no longer queried, but user editable as needed. Before Sept 2023, was 'RCTs returned in the previous month that were deposited prior to the previous month: (Deposit_Date__c &lt;= :lastOf2MonthsPrevious) AND (Returned_Date__c &gt;= :firstOfPreviousMonth AND Returned_Date__c &lt;= :lastOfPreviousMonth) AND Returned_Item__c = TRUE</description>
    <inlineHelpText>User editable as needed.</inlineHelpText>
    <label>+ Prior Month Returned Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>