force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Prior_Month_Voided_Canceled_Warrants__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Voided_Canceled_Warrants__c</fullName>
    <description>From CreateOAMTRecords apex class - sum of Warrant__c.Amount__c for all Warrants where Issue Date is _before_ the previous month, Status Date is _in_ the previous month, and Status = Voided or Canceled.</description>
    <inlineHelpText>Sum of Warrant.Amount where Issue Date is 𝘣𝘦𝘧𝘰𝘳𝘦 the previous month, Status Date is 𝘪𝘯 the previous month, and Status = 'Voided', 'Canceled', or 'Stopped'.</inlineHelpText>
    <label>+ Prior Month Voided &amp; Canceled Warrants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>