force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Voided_Canceled_and_Stopped_Warrants__c.field-meta.xml
<CustomField>
    <fullName>Voided_Canceled_and_Stopped_Warrants__c</fullName>
    <description>Populated by CreateOAMTRecords apex class. Sum of issued Warrants where the Status was changed to 'Voided', 'Canceled', or 'Stopped' in the previous month.</description>
    <inlineHelpText>Sum of issued Warrants that were voided, canceled or stopped in the previous month.</inlineHelpText>
    <label>+ Voided, Canceled, and Stopped Warrants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>