force-app/main/default/objects/Office_Account_Monthly_Totals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Office_Account__c</columns>
    <columns>Date__c</columns>
    <columns>Month_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prior_Month_Starting_Balance__c</columns>
    <columns>Deposited_Receipts__c</columns>
    <columns>Voided_Canceled_and_Stopped_Warrants__c</columns>
    <columns>Adjustments__c</columns>
    <columns>Prior_Month_Returned_Receipts__c</columns>
    <columns>Disbursements__c</columns>
    <columns>Ending_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>